# CMakeList.txt : CMake project for TheSimulator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (TheSimulator
	"AdaptiveOfferingAgent.cpp"
	"AdaptiveOfferingAgent.h"
	"Agent.cpp"
	"Agent.h"
	"Book.cpp"
	"Book.h"
	"BouchaudAgent.cpp"
	"BouchaudAgent.h"
	"Decimal.cpp"
	"Decimal.h"
	"DoobAgent.cpp"
	"DoobAgent.h"
	"ExchangeAgent.cpp"
	"ExchangeAgent.h"
	"TheSimulatorModule.cpp"
	"ExchangeAgentMessagePayloads.h"
	"IConfigurable.h"
	"ICSVPrintable.h"
	"IHumanPrintable.h"
	"IMessageable.cpp"
	"IMessageable.h"
	"ImpactAgent.cpp"
	"ImpactAgent.h"
	"IPrintable.h"
	"L1LogAgent.cpp"
	"L1LogAgent.h"
	"main.cpp"
	"Message.h"
	"MessagePayload.h"
	"Money.cpp"
	"Money.h"
	"Order.cpp"
	"Order.h"
	"OrderFactory.h"
	"OrderLogAgent.cpp"
	"OrderLogAgent.h"
	"OrderRecord.cpp"
	"ParameterStorage.cpp"
	"ParameterStorage.h"
	"PriceTimeBook.cpp"
	"PriceTimeBook.h"
	"PriorityProRataBook.cpp"
	"PriorityProRataBook.h"
	"PureProRataBook.h"
	"PureProRataBook.cpp"
	"PythonAgent.h"
	"PythonAgent.cpp"
	"RandomWalkMarketMakerAgent.h"
	"RandomWalkMarketMakerAgent.cpp"
	"SetupAgent.cpp"
	"SetupAgent.h"
	"Simulation.cpp"
	"Simulation.h"
	"SimulationException.h"
	"split.h"
	"split.cpp"
	"TimeProRataBook.cpp"
	"TimeProRataBook.h"
	"Timestamp.h"
	"Trade.cpp"
	"Trade.h"
	"TradeFactory.cpp"
	"TradeFactory.h"
	"TradeLogAgent.cpp"
	"TradeLogAgent.h"
	"Volume.h"
)

add_subdirectory ("dimcli")
add_subdirectory ("pugi")